--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "axios": "^1.6.8",
     "b64-to-blob": "^1.2.19",
+    "browser-image-compression": "^2.0.2",
     "multer": "^1.4.5-lts.1",
     "next": "12.1.6",
     "react": "18.1.0",
