--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "axios": "^1.6.8",
     "b64-to-blob": "^1.2.19",
     "browser-image-compression": "^2.0.2",
+    "masonry": "^0.0.2",
     "multer": "^1.4.5-lts.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-responsive-masonry": "^2.2.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
