--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
     "b64-to-blob": "^1.2.19",
     "browser-image-compression": "^2.0.2",
@@ -23,7 +24,10 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-redux": "^9.1.0",
     "react-responsive-masonry": "^2.2.0",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
